rule-tests/internal-networking/namespace-failed/input/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      purpose: demonstrate-command
  egress:
    -
      to :
        -
          ipBlock :
            cidr : 10.0.0.0/24
      ports :
        -
          protocol : TCP
          port : 5978
